# vu-ml-project

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: clean_notebooks.yml
paper/: Makefile  README.md  info_sheet.tex  pagestyle.sty  paper.tex  sources.bib
paper/code/: sample_script.py
src/: combined_model.py  config.py  databuilder.py  loss.py  model.py  testing.ipynb
