[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["KaiErikNiermann <kai.niermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
kaggle = "^1.6.6"
opencv-python = "^4.9.0.80"
keras-cv = "^0.8.2"
tensorflow = "2.16.0-rc0"
keras = "^3.0.5"
jax = "^0.4.25"
jaxlib = "^0.4.25"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
