[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["KaiErikNiermann <kai.niermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
kaggle = "^1.6.6"
opencv-python = "^4.9.0.80"
umap-learn = "^0.5.5"
pip = "^24.0"
ipywidgets = "^8.1.2"
jax = {extras = ["cuda-pip"], version = "^0.4.25"}
tensorflow = {extras = ["and-cuda"], version = "^2.16.1"}
keras-cv = "^0.8.2"
keras = "^3.0.5"
pydot = "^2.0.0"
graphviz = "^0.20.1"
nbconvert = "^7.16.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
